--- a/style.css
+++ b/style.css
@@ -1,11 +1,29 @@
-body, html, div {
-    height: 100%;
+.wrapper {
+    display: flex;
+    align-items: stretch;
 }
 
-nav {
-    background-color: red;
+#sidebar {
+    position: sticky;
+    top: 0;
+    
+    min-width: 250px;
+    max-width: 250px;
+    height: 100vh;
+    
+    background-color: teal;
+    
 }
 
 main {
-    background-color: blue;
+    color: khaki;
+    background-color: #404040;
+    
+    left: 0;
+    right: 0;
+    
+    overflow-y: scroll;
+    
+    position: absolute;
+    
 }
