--- a/style.css
+++ b/style.css
@@ -1,6 +1,13 @@
+html, body {
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
+}
+
 .wrapper {
     display: flex;
-    align-items: stretch;
 }
 
 #sidebar {
@@ -13,6 +20,8 @@
     
     background-color: teal;
     
+    position: fixed;
+    
 }
 
 main {
@@ -23,7 +32,8 @@ main {
     right: 0;
     
     overflow-y: scroll;
-    
     position: absolute;
     
+    margin-left: 250px;
+    padding-left: 0;
 }
