Added hover effect : turn yellow and bold when mouseover to navbar's hyperlinks.

--- a/style.css
+++ b/style.css
@@ -24,6 +24,15 @@ html, body {
     
 }
 
+#sidebar a {
+    text-decoration: none;
+    color: white;
+}
+#sidebar a:hover {
+    font-weight: bolder;
+    color: yellow;
+}
+
 main {
     color: khaki;
     background-color: #404040;
