--- a/style.css
+++ b/style.css
@@ -6,17 +6,35 @@
     max-width: 250px;
     height: 100vh;
     
-    background-color: teal;
+    background-color: #100F0D;
     
 }
 
 #sidebar a {
-    text-decoration: none;
     color: white;
+    font-size: 20px;
+    
+    display: block;
+    text-decoration: none;
+    text-align: center;
 }
 #sidebar a:hover {
     font-weight: bolder;
     color: yellow;
+}
+
+#navbar {
+    background-color: #22211B;
+    margin: 0 auto;
+    width: 200px;
+    height: 300px;
+    
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+#m-logo {
+    
 }
 
 main {
