Changes made to contact.html and style.css 1. Centralized form in horizontal and vertical manner 2. Style the contact form on contact.html

--- a/style.css
+++ b/style.css
@@ -58,10 +58,15 @@
 
 .contact-form {
     width: 500px;
-    height: 500px;
-    
     background-color: white;
     
+    position: relative;
+    margin: 0 auto;
+    transform: translateY(-50%);
+    top: 50%;
+    
+    padding: 30px;
+    border-radius: 10px;
 }
 
 main {
