--- a/style.css
+++ b/style.css
@@ -61,11 +61,9 @@
 #about article div {
     font-family: 'Quicksand', sans-serif;
     font-size: 20px;
-    
-    margin: 0;
-    padding: 20px;
-    
     text-align: justify;
+    
+    top: 50%;
 }
 #about article div h1 {
     margin-bottom: 25px;
