--- a/style.css
+++ b/style.css
@@ -63,7 +63,10 @@
     font-size: 20px;
     text-align: justify;
     
-    top: 50%;
+    position: absolute;
+    top: 10%;
+    left: 10%;
+    transform: translate(-5%, -5%);
 }
 #about article div h1 {
     margin-bottom: 25px;
