1. Added some updates to README.md 2. Added margin top&bottom 50px and left&right auto toward horizontal rule on about.html for seperating band history and members.

--- a/style.css
+++ b/style.css
@@ -71,6 +71,9 @@
 #about article div h1 {
     margin-bottom: 25px;
 }
+#about article div hr {
+    margin: 50px auto;
+}
 
 
 /* --- classes --- */
