Added some maroon 5 video links from youtube on README.md page

--- a/style.css
+++ b/style.css
@@ -78,6 +78,8 @@
 
 /* --- classes --- */
 .contact-form {
+    font-family: 'Quicksand', sans-serif;
+    
     width: 1000px;
     background-color: white;
     
