1. Added photos-wall.jpg for photos.html background image. 2. Added bootstrap class text-white to selected pages (music and photos) heading1.

--- a/style.css
+++ b/style.css
@@ -109,7 +109,7 @@
     opacity: 0.95;
 }
 
-
+/* --- General attributes --- */
 main {
     /*color: khaki;*/
     background-position: center;
@@ -125,6 +125,7 @@ main {
     height: 100vh;
 }
 
+/* --- For the video frames in videos.html page --- */
 iframe {
     width: 450px;
     height: 315px;
