--- a/style.css
+++ b/style.css
@@ -141,3 +141,25 @@ h1 {
     font-family: 'Quicksand', sans-serif;
     font-weight: bold;
 }
+
+#photos .row {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0 5px;
+}
+
+/* Create four equal columns that sits next to each other */
+#photos .column {
+  flex: 50%;
+  max-width: 50%;
+  padding: 0 5px;
+  
+  text-align: center;
+}
+
+#photos .column img {
+  width: 100%;
+  margin-top: 10px;
+  
+  vertical-align: middle;
+}
