--- a/style.css
+++ b/style.css
@@ -145,14 +145,16 @@ h1 {
 #photos .row {
   display: flex;
   flex-wrap: wrap;
-  padding: 0 5px;
+  padding: 0 10px;
+  
+  margin-bottom: 25px;
 }
 
-/* Create four equal columns that sits next to each other */
+/* Create two equal columns that sits next to each other */
 #photos .column {
   flex: 50%;
   max-width: 50%;
-  padding: 0 5px;
+  padding: 0 10px;
   
   text-align: center;
 }
