--- a/style.css
+++ b/style.css
@@ -76,6 +76,31 @@
     background-image: url("images/photos-wall.jpg");
 }
 
+#photos .row {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0 10px;
+  
+  margin-bottom: 25px;
+}
+
+/* Create two equal columns that sits next to each other */
+#photos .column {
+  flex: 50%;
+  max-width: 50%;
+  padding: 0 10px;
+  
+  text-align: center;
+}
+
+#photos .column img {
+  width: 100%;
+  margin-top: 10px;
+  
+  vertical-align: middle;
+}
+
+
 /* --- Attributes specific in different pages ---*/
 /* --- about.html --- */
 #about article div {
@@ -96,6 +121,17 @@
     margin: 50px auto;
 }
 
+#spotify-list {
+    text-align: center;
+}
+
+#spotify-list iframe {
+    
+    width: 600px;
+    height: 540px;
+    
+    margin: 25px 30px;
+}
 
 /* --- classes --- */
 .contact-form {
@@ -140,28 +176,4 @@ iframe {
 h1 {
     font-family: 'Quicksand', sans-serif;
     font-weight: bold;
-}
-
-#photos .row {
-  display: flex;
-  flex-wrap: wrap;
-  padding: 0 10px;
-  
-  margin-bottom: 25px;
-}
-
-/* Create two equal columns that sits next to each other */
-#photos .column {
-  flex: 50%;
-  max-width: 50%;
-  padding: 0 10px;
-  
-  text-align: center;
-}
-
-#photos .column img {
-  width: 100%;
-  margin-top: 10px;
-  
-  vertical-align: middle;
 }
