--- a/style.css
+++ b/style.css
@@ -20,15 +20,18 @@
 }
 
 #navbar {
-    margin: 0 auto;
+    
     width: 400px;
     height: auto;
 
+    margin: 0 auto;
     top: 50%;
+    
     transform: translateY(-50%);
 }
 
 #navbar a {
+    
     color: white;
     font-size: 25px;
     font-family: 'Quicksand', sans-serif;
@@ -41,50 +44,46 @@
 }
 
 #navbar a:hover {
+    
     color: yellow;
     font-weight: bolder;
-
 }
 
 #m-logo {
+    
     margin-bottom: 20px;
     text-align: center;
 }
 
+
 /* --- Wallpaper in different web pages --- */
 
 /* home.html background image */
-
 #home {
     background-image: url("images/maroon5-wall.jpg");
 }
 
 /* about.html background image */
-
 #about {
     background-image: url("images/aboutus-wall.jpg");
 }
 
 /* contact.html background image */
-
 #contact {
     background-image: url("images/contact-wall.jpg");
 }
 
 /* videos.html background image */
-
 #videos {
     background-image: url("images/videos-wall.jpg");
 }
 
 /* music.html background image*/
-
 #music {
     background-image: url("images/music-wall.jpg");
 }
 
 /* photos.html background image */
-
 #photos {
     background-image: url("images/photos-wall.jpg");
 }
@@ -98,7 +97,6 @@
 }
 
 /* Create two equal columns that sits next to each other */
-
 #photos .column {
     flex: 50%;
     max-width: 50%;
@@ -127,7 +125,6 @@
 /* --- Attributes specific in different pages ---*/
 
 /* --- about.html --- */
-
 #about article {
     color: white;
     font-family: 'Quicksand', sans-serif;
@@ -139,11 +136,9 @@
     left: 10%;
     transform: translate(-5%, -5%);
 }
-
 #about article h1 {
     margin-bottom: 25px;
 }
-
 #about article hr {
     margin-top: 50px;
 
@@ -153,9 +148,9 @@
 }
 
 #spotify-list {
+    
     text-align: center;
 }
-
 #spotify-list iframe {
 
     width: 600px;
@@ -164,8 +159,26 @@
     margin: 25px 30px;
 }
 
-/* --- classes --- */
+#social {
+    text-align: center;
+    padding: 10px 0;
+    margin-top: 20px;
+}
 
+#social a {
+    display: inline;
+    padding: 0 5px;
+    
+    width: inherit;
+    height: inherit;
+}
+
+#social a img {
+    width: 40px;
+    height: inherit;
+}
+
+/* --- Classes in all web pages --- */
 .contact-form {
 
     color: white;
@@ -191,14 +204,13 @@
 }
 
 .contact-form textarea {
-
+    
     height: 200px;
     min-height: 200px;
     max-height: 200px;
 }
 
 /* --- input and textarea fields color --- */
-
 .contact-form input,
 .contact-form textarea {
 
@@ -206,14 +218,12 @@
 }
 
 /* --- input and textarea fields color changed during focus --- */
-
 .contact-form input:focus,
 .contact-form textarea:focus {
 
     color: gold;
     font-weight: bold;
     background-color: purple;
-
 }
 
 .contact-form input:focus::-webkit-input-placeholder,
@@ -228,7 +238,6 @@
 
 
 /* --- General attributes --- */
-
 main {
     /*color: khaki;*/
     background-position: center;
@@ -245,7 +254,6 @@ main {
 }
 
 /* --- For the video frames in videos.html page --- */
-
 iframe {
     width: 450px;
     height: 315px;
